# comfyui-llm-toolkit

./: .gitignore  PERFORMANCE_OPTIMIZATION.md  README.md  __init__.py  bfl_api.py  context_payload.py  llmtoolkit_utils.py  mcp_manager.py  ollama_api.py  openai_api.py  package-lock.json  provider_models_hardcoded.py  pyproject.toml  requirements.txt  send_request.py  suno_api.py  test_import.py  test_js_integration.py  transformers_api.py  wavespeed_image_api.py
api/: __init__.py  anthropic_api.py  bfl_api.py  deepseek_api.py  gemini_api.py  gemini_image_api.py  openai_api.py  openrouter_api.py  transformers_api.py  wavespeed_image_api.py
comfy-nodes/: IF_LLM_DisplayText.py  api_key_input.py  api_provider_selector.py  audio_duration_frames.py  banana_task_generator.py  bfl_provider.py  blank_image.py  check_image_empty.py  config_generate_image.py  config_generate_image_bfl.py  config_generate_image_flux_dev.py  config_generate_image_gemini.py  config_generate_image_openai.py  config_generate_image_openrouter.py  config_generate_image_portrait.py  config_generate_image_seedance_editv3.py  config_generate_image_seedream.py  config_generate_image_split.py  config_generate_music.py  config_generate_speech.py  config_generate_video.py  config_generate_video_hailuo_i2v_pro.py  config_generate_video_hailuo_i2v_standard.py  config_generate_video_hailuo_t2v_pro.py  config_generate_video_hailuo_t2v_standard.py  config_generate_video_kling_i2v_master.py  config_generate_video_kling_i2v_pro.py  config_generate_video_kling_i2v_standard.py  config_generate_video_veo2_i2v.py  (+35 more)
(+157 files in other folders)
